--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -27,6 +27,9 @@
                     <i class="bi bi-people me-2"></i> Users
                 </a>
                 <!-- Placeholder Links -->
+                 <a routerLink="Categories" routerLinkActive="" class="sidebar-link">
+                    <i class="bi bi-file-earmark-text me-2"></i> Categories
+                </a>
                 <a href="#" class="sidebar-link">
                     <i class="bi bi-graph-up me-2"></i> Analytics
                 </a>
