Add Book and Update Category by Phannoet

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -30,6 +30,9 @@
                 <a routerLink="categories" routerLinkActive="active" class="sidebar-link">
                     <i class="bi bi-file-earmark-text me-2"></i> Categories
                 </a>
+                <a routerLink="books" routerLinkActive="active" class="sidebar-link">
+                    <i class="bi bi-book me-2"></i> Books
+                </a>
                 <a href="#" class="sidebar-link">
                     <i class="bi bi-graph-up me-2"></i> Analytics
                 </a>
